# sjasoft-uop

./: pyproject.toml  pytest.ini
docs/: tasks.org
src/sjasoft/uop/: changeset.py  collections.py  database.py  db_collection.py  db_interface.py  db_service.py  memdb.py  query.py  services.py
src/sjasoft/uop/async_path/: changeset.py  database.py  db_collection.py  db_interface.py  services.py
src/sjasoft/uop/connect/: direct.py  direct_async.py  uop_connect.py  web.py
tests/: test_async_db_interface.py  test_changeset.py  test_db_interface.py  test_query.py  test_schemas.py  test_service.py  user_collections.py  web_client.py
