[project]
name = "sjasoft-uop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samantha Atkins", email = "samantha@conceptwareinc.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.1",
]

[project.scripts]
sjasoft-uop = "sjasoft.uop:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.uv.sources]
sjasoft-uopmeta = { path = "../sjasoft-uopmeta" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "sjasoft-uopmeta",
]
